--- a/styles/partials/_general.scss
+++ b/styles/partials/_general.scss
@@ -9,3 +9,22 @@ h1 {
 .red {
     color: red;
 }
+
+main {
+    min-width: 100vw;
+    min-height: 100vh;
+    height: auto;
+    background-color: lightblue;
+    padding: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    display: none;
+}
+
+.card-1 {
+    display: block;
+}
