--- a/styles/style.css
+++ b/styles/style.css
@@ -153,3 +153,32 @@ h1 {
 
 .red {
   color: red; }
+
+main {
+  min-width: 100vw;
+  min-height: 100vh;
+  height: auto;
+  background-color: lightblue;
+  padding: 1px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.card {
+  display: none; }
+
+.card-1 {
+  display: block; }
+
+section.play-window {
+  max-width: 1000px;
+  width: 75%;
+  max-height: 800px;
+  background-color: gainsboro;
+  border: 10px solid turquoise; }
