--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,12 @@
 @import "partials/setup";
+@import "partials/mixins";
+@import "partials/fonts";
+@import "partials/colors";
 @import "partials/general";
 
+@import "partials/button";
+
+@import "partials/title";
 @import "partials/play-window";
+@import "partials/questions";
+@import "partials/results";
