--- a/styles/style.css
+++ b/styles/style.css
@@ -146,20 +146,140 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   overflow: hidden; }
 
 html {
-  font-size: 125%; }
-
-h1 {
-  color: dodgerblue; }
+  font-size: 125%;
+  font-family: "IM Fell DW Pica SC", serif; }
 
 .red {
   color: red; }
 
+img {
+  display: block;
+  width: 100%; }
+
 main {
   min-width: 100vw;
   min-height: 100vh;
-  height: auto;
-  background-color: lightblue;
+  background: rgba(255, 214, 221, 0.4);
   padding: 1px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 25px; }
+
+button {
+  padding: 20px;
+  border: none; }
+
+button.launch {
+  background-color: rgba(239, 239, 239, 0.3);
+  color: #070707;
+  text-transform: uppercase;
+  height: 150px;
+  width: 250px;
+  font-size: 25px;
+  font-size: 1.25rem;
+  border: 5px solid #efefef;
+  border-radius: 10px; }
+  button.launch:hover {
+    background-color: rgba(255, 214, 221, 0.4); }
+  button.launch:focus {
+    background-color: #FFD6DD;
+    border: 5px solid #070707; }
+
+button.results {
+  margin: 25px;
+  background-color: blue;
+  color: white; }
+
+h1 {
+  font-family: "UnifrakturCook", cursive;
+  color: #070707;
+  padding: 25px 0;
+  margin: 0;
+  font-size: 70px;
+  font-size: 3.5rem;
+  text-align: center; }
+  h1 span {
+    padding: 0 10px; }
+
+h3 {
+  text-align: center;
+  margin: 0 0 25px;
+  font-size: 20px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  color: #070707; }
+
+section.play-window {
+  max-width: 850px;
+  width: calc(100vw - 200px);
+  height: calc(100vh - 250px);
+  background: url(../assets/parchment.jpg) no-repeat center;
+  background-size: cover;
+  border: 10px solid #ffe1a8;
+  position: relative; }
+
+.card {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+div.intro {
+  width: 65%;
+  background-color: rgba(239, 239, 239, 0.3);
+  margin-bottom: 50px;
+  padding: 10px 12px;
+  border-radius: 10px; }
+  div.intro p {
+    font-size: 30px;
+    font-size: 1.5rem;
+    text-align: center; }
+
+div.question-container {
+  width: 90%;
+  background-color: rgba(239, 239, 239, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 20px;
+  border-radius: 10px;
+  border: solid 5px #efefef; }
+
+.label-container {
+  width: calc(50% - 40px);
+  height: 100px;
+  background-color: #ffe1a8;
+  margin: 20px;
+  padding: 10px;
+  font-size: 25px;
+  font-size: 1.25rem;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -168,17 +288,63 @@ main {
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  position: relative; }
 
-.card {
+input {
   display: none; }
 
-.card-1 {
-  display: block; }
+fieldset {
+  border: none;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  fieldset h2 {
+    text-align: center;
+    font-size: 40px;
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin: 10px; }
+  fieldset label {
+    display: block;
+    text-align: center;
+    width: 100%;
+    overflow: hidden;
+    padding: 40px 0;
+    color: #070707; }
 
-section.play-window {
-  max-width: 1000px;
-  width: 75%;
-  max-height: 800px;
-  background-color: gainsboro;
-  border: 10px solid turquoise; }
+.label-checked {
+  color: #FFD6DD; }
+
+.div-checked {
+  background-color: #FFD6DD;
+  border: 2px solid #efefef; }
+
+.coat-of-arms {
+  width: 500px;
+  height: 650px;
+  background-color: blue;
+  margin: 50px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-clip-path: polygon(50% 0%, 0% 8%, 0% 50%, 2% 60%, 4% 65%, 6% 70%, 8% 75%, 10% 80%, 12% 85%, 15% 90%, 25% 95%, 50% 100%, 75% 95%, 85% 90%, 88% 85%, 90% 80%, 92% 75%, 94% 70%, 96% 65%, 98% 60%, 100% 50%, 100% 8%);
+  clip-path: polygon(50% 0%, 0% 8%, 0% 50%, 2% 60%, 4% 65%, 6% 70%, 8% 75%, 10% 80%, 12% 85%, 15% 90%, 25% 95%, 50% 100%, 75% 95%, 85% 90%, 88% 85%, 90% 80%, 92% 75%, 94% 70%, 96% 65%, 98% 60%, 100% 50%, 100% 8%); }
+
+.quadrant {
+  width: 50%;
+  height: 325px; }
