--- a/styles/partials/_questions.scss
+++ b/styles/partials/_questions.scss
@@ -10,7 +10,7 @@ div.question-container {
 
 .label-container {
     width: calc(50% - 40px);
-    height: 100px;
+    height: 125px;
     background-color: $parchment;
     margin: 20px;
     padding: 10px;
@@ -48,8 +48,19 @@ fieldset {
         text-align: center;
         width: 100%;
         overflow: hidden;
-        padding: 40px 0;
+        padding: 60px 0;
         color: $dark;
+        z-index: 10;
+    }
+    a {
+        text-decoration: none;
+        width: 100%;
+        &:focus {
+            color: red;
+        }
+        &:focus-within {
+            color:red;
+        }
     }
 }
 
