--- a/styles/partials/_questions.scss
+++ b/styles/partials/_questions.scss
@@ -1,5 +1,6 @@
 div.question-container {
     width: 90%;
+    margin: 0 5%;
     background-color: $light-opacity;
     display: flex;
     flex-wrap: wrap;
