--- a/styles/partials/_questions.scss
+++ b/styles/partials/_questions.scss
@@ -23,6 +23,7 @@ div.question-container {
     justify-content: center;
     align-items: center;
     position: relative;
+    border: 2px solid $parchment;
 }
 
 input {
