--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,10 +3,11 @@
 @import "partials/fonts";
 @import "partials/colors";
 @import "partials/general";
-
 @import "partials/button";
 
 @import "partials/title";
 @import "partials/play-window";
 @import "partials/questions";
 @import "partials/results";
+
+@import "partials/media-queries";
