--- a/styles/partials/_button.scss
+++ b/styles/partials/_button.scss
@@ -23,6 +23,11 @@ button.launch {
 
 button.next {
     margin: 25px auto;
+    border: 2px solid $light;
+    &:focus {
+        background-color: $light-accent;
+        border: 2px solid $dark;
+    }
 }
 
 button.results {
