--- a/styles/partials/_play-window.scss
+++ b/styles/partials/_play-window.scss
@@ -8,26 +8,19 @@
     position: relative;
 }
 
-
-
 .card {
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-
-
 div.intro {
     width: 65%;
     background-color: $light-opacity;
-    margin-bottom: 50px;
+    margin: 50px;
     padding: 10px 12px;
     border-radius: 10px;
     p {
