--- a/styles/style.css
+++ b/styles/style.css
@@ -168,7 +168,7 @@ main {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 25px; }
+  padding: 75px 25px; }
 
 button {
   padding: 20px;
@@ -191,7 +191,11 @@ button.launch {
     border: 5px solid #070707; }
 
 button.next {
-  margin: 25px auto; }
+  margin: 25px auto;
+  border: 2px solid #efefef; }
+  button.next:focus {
+    background-color: #FFD6DD;
+    border: 2px solid #070707; }
 
 button.results {
   margin: 25px;
@@ -204,7 +208,8 @@ button.label-container:focus-within {
 h1 {
   font-family: "UnifrakturCook", cursive;
   color: #070707;
-  padding: 25px 0;
+  padding: 0;
+  padding-bottom: 20px;
   margin: 0;
   font-size: 70px;
   font-size: 3.5rem;
@@ -233,11 +238,8 @@ h3 {
   position: relative; }
 
 .card {
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -255,7 +257,7 @@ h3 {
 div.intro {
   width: 65%;
   background-color: rgba(239, 239, 239, 0.3);
-  margin-bottom: 50px;
+  margin: 50px;
   padding: 10px 12px;
   border-radius: 10px; }
   div.intro p {
@@ -296,7 +298,8 @@ div.question-container {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  position: relative; }
+  position: relative;
+  border: 2px solid #ffe1a8; }
 
 input {
   display: none; }
@@ -408,3 +411,83 @@ fieldset {
 
 .results-display h3 {
   text-align: center; }
+
+@media only screen and (max-width: 1050px) {
+  h1 {
+    width: 650px; } }
+
+@media only screen and (max-width: 950px) {
+  fieldset label {
+    padding: 50px 0;
+    font-size: 20px;
+    font-size: 1rem; }
+  .label-container {
+    height: 150px; } }
+
+@media only screen and (max-width: 750px) {
+  .play-window {
+    width: 90%; } }
+
+@media only screen and (max-width: 650px) {
+  h1 {
+    width: 500px;
+    font-size: 50px;
+    font-size: 2.5rem; }
+  h3 {
+    font-size: 18px;
+    font-size: 0.9rem; }
+  div.intro p {
+    font-size: 25px;
+    font-size: 1.25rem;
+    line-height: 1.5; }
+  div.coat-of-arms-container {
+    width: 400px;
+    min-height: 520px; }
+  .coat-of-arms {
+    width: 380px;
+    height: 500px; }
+  .quadrant {
+    height: 50%; }
+  div.question-container {
+    width: 95%;
+    padding: 20px 0;
+    margin: 0 2.5%; }
+  fieldset {
+    padding: 20px 10px; } }
+
+@media only screen and (max-width: 550px) {
+  .play-window {
+    width: 100%; }
+  fieldset h2 {
+    font-size: 30px;
+    font-size: 1.5rem; } }
+
+@media only screen and (max-width: 500px) {
+  .label-container {
+    width: calc(100% - 40px);
+    height: 100px;
+    margin: 10px 20px; }
+  h1 {
+    width: 90%;
+    margin: 0 5%;
+    text-align: center; }
+  main {
+    padding: 50px 15px; } }
+
+@media only screen and (max-width: 465px) {
+  div.coat-of-arms-container {
+    width: 350px;
+    min-height: 470px; }
+  .coat-of-arms {
+    width: 330px;
+    height: 450px; } }
+
+@media only screen and (max-width: 400px) {
+  div.coat-of-arms-container {
+    width: 300px;
+    min-height: 390px; }
+  .coat-of-arms {
+    width: 280px;
+    height: 370px; }
+  main {
+    padding: 30px 5px; } }
